~~~~~~~~~~~~~~~~
version 8.0.1
~~~~~~~~~~~~~~~~

* fix an issue when using import on web clone

~~~~~~~~~~~~~~~~
version 8.0
~~~~~~~~~~~~~~~~

* fix an issue that caused metasploit web server to not properly work with apache_server to off
* changed arduino powershell shellcode to https instead of http
* fixed bug that would not generate powershell encoded code when using arduino
* fixed a sudo check for SET when not running as root would cause a log error exception
* removed setup.py in favor of requirements.txt - no longer needed
* updated readme and install documentation to reflect new install procedures through requirements.txt
* updated copyright information to 2019
* removed irc channel, no longer active or used
* removed old sms phishing menu - spoofmytext never fixed their API and no longer supported
* removed full screen attack - no longer supported or maintained
* removed html generation from web attack, no longer supported

~~~~~~~~~~~~~~~~
version 7.7.9
~~~~~~~~~~~~~~~~

* fix source.js not copying over when using tabnabbing
* bump config version and add default apache dir to /var/www/html
* fix sendmail not found on OSX when using phishing emails

~~~~~~~~~~~~~~~~
version 7.7.8
~~~~~~~~~~~~~~~~

* fix ident issue on harvester throwing templates off

~~~~~~~~~~~~~~~~
version 7.7.7
~~~~~~~~~~~~~~~~

* remove old test code
* add better wording for templates
* remove old templates yahoo and facebook
* add better descriptions for using NAT/External IP addresses for credential harvester
* fix if a custom PDF is selected, it won't default to a blank pdf
* add user variable to harvester

~~~~~~~~~~~~~~~~
version 7.7.6
~~~~~~~~~~~~~~~~

* fix GOAT message when starting SSL server
* fix BaseServer not being identified in import
* fix OSX cloning for harvester (port allocation)
* fix web server from not closing properly when using java applet attack

~~~~~~~~~~~~~~~~
version 7.7.5
~~~~~~~~~~~~~~~~

* fix line split based on = on credential harvester
